// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tokenizer should tokenize a single non-self-closing tag 1`] = `
Array [
  Object {
    "endIdx": 4,
    "startIdx": 0,
    "tag": "Room",
    "type": "TagOpenBegin",
  },
  Object {
    "endIdx": 5,
    "startIdx": 5,
    "type": "Whitespace",
  },
  Object {
    "endIdx": 9,
    "isBoolean": false,
    "key": "key",
    "startIdx": 6,
    "type": "Property",
  },
  Object {
    "endIdx": 14,
    "startIdx": 10,
    "type": "KeyValue",
    "value": "ABC",
  },
  Object {
    "endIdx": 15,
    "selfClosing": false,
    "startIdx": 15,
    "type": "TagOpenEnd",
  },
  Object {
    "endIdx": 22,
    "startIdx": 16,
    "tag": "Room",
    "type": "TagClose",
  },
]
`;

exports[`tokenizer should tokenize a single self-closing tag 1`] = `
Array [
  Object {
    "endIdx": 4,
    "startIdx": 0,
    "tag": "Room",
    "type": "TagOpenBegin",
  },
  Object {
    "endIdx": 5,
    "startIdx": 5,
    "type": "Whitespace",
  },
  Object {
    "endIdx": 9,
    "isBoolean": false,
    "key": "key",
    "startIdx": 6,
    "type": "Property",
  },
  Object {
    "endIdx": 14,
    "startIdx": 10,
    "type": "KeyValue",
    "value": "ABC",
  },
  Object {
    "endIdx": 15,
    "startIdx": 15,
    "type": "Whitespace",
  },
  Object {
    "endIdx": 17,
    "selfClosing": true,
    "startIdx": 16,
    "type": "TagOpenEnd",
  },
]
`;

exports[`tokenizer should tokenize comments 1`] = `
Array [
  Object {
    "endIdx": 5,
    "startIdx": 0,
    "tag": "Asset",
    "type": "TagOpenBegin",
  },
  Object {
    "endIdx": 6,
    "startIdx": 6,
    "type": "Whitespace",
  },
  Object {
    "endIdx": 10,
    "isBoolean": false,
    "key": "key",
    "startIdx": 7,
    "type": "Property",
  },
  Object {
    "endIdx": 16,
    "startIdx": 11,
    "type": "KeyValue",
    "value": "Test",
  },
  Object {
    "endIdx": 17,
    "selfClosing": false,
    "startIdx": 17,
    "type": "TagOpenEnd",
  },
  Object {
    "endIdx": 35,
    "startIdx": 31,
    "tag": "Room",
    "type": "TagOpenBegin",
  },
  Object {
    "endIdx": 36,
    "startIdx": 36,
    "type": "Whitespace",
  },
  Object {
    "endIdx": 49,
    "startIdx": 37,
    "type": "Comment",
  },
  Object {
    "endIdx": 50,
    "startIdx": 50,
    "type": "Whitespace",
  },
  Object {
    "endIdx": 54,
    "isBoolean": false,
    "key": "key",
    "startIdx": 51,
    "type": "Property",
  },
  Object {
    "endIdx": 59,
    "startIdx": 55,
    "type": "KeyValue",
    "value": "ABC",
  },
  Object {
    "endIdx": 60,
    "selfClosing": false,
    "startIdx": 60,
    "type": "TagOpenEnd",
  },
  Object {
    "endIdx": 89,
    "startIdx": 78,
    "tag": "Description",
    "type": "TagOpenBegin",
  },
  Object {
    "endIdx": 90,
    "selfClosing": false,
    "startIdx": 90,
    "type": "TagOpenEnd",
  },
  Object {
    "endIdx": 111,
    "startIdx": 91,
    "type": "Whitespace",
  },
  Object {
    "endIdx": 128,
    "startIdx": 112,
    "type": "Description",
    "value": "Test description",
  },
  Object {
    "endIdx": 136,
    "startIdx": 128,
    "type": "Comment",
  },
  Object {
    "endIdx": 157,
    "startIdx": 137,
    "type": "Whitespace",
  },
  Object {
    "endIdx": 170,
    "startIdx": 158,
    "type": "Comment",
  },
  Object {
    "endIdx": 191,
    "startIdx": 171,
    "type": "Whitespace",
  },
  Object {
    "endIdx": 203,
    "startIdx": 192,
    "type": "Description",
    "value": "End of test",
  },
  Object {
    "endIdx": 219,
    "startIdx": 203,
    "type": "Whitespace",
  },
  Object {
    "endIdx": 233,
    "startIdx": 220,
    "tag": "Description",
    "type": "TagClose",
  },
  Object {
    "endIdx": 253,
    "startIdx": 247,
    "tag": "Room",
    "type": "TagClose",
  },
  Object {
    "endIdx": 270,
    "startIdx": 263,
    "tag": "Asset",
    "type": "TagClose",
  },
]
`;

exports[`tokenizer should tokenize descriptions 1`] = `
Array [
  Object {
    "endIdx": 5,
    "startIdx": 0,
    "tag": "Asset",
    "type": "TagOpenBegin",
  },
  Object {
    "endIdx": 6,
    "startIdx": 6,
    "type": "Whitespace",
  },
  Object {
    "endIdx": 10,
    "isBoolean": false,
    "key": "key",
    "startIdx": 7,
    "type": "Property",
  },
  Object {
    "endIdx": 16,
    "startIdx": 11,
    "type": "KeyValue",
    "value": "Test",
  },
  Object {
    "endIdx": 17,
    "selfClosing": false,
    "startIdx": 17,
    "type": "TagOpenEnd",
  },
  Object {
    "endIdx": 35,
    "startIdx": 31,
    "tag": "Room",
    "type": "TagOpenBegin",
  },
  Object {
    "endIdx": 36,
    "startIdx": 36,
    "type": "Whitespace",
  },
  Object {
    "endIdx": 40,
    "isBoolean": false,
    "key": "key",
    "startIdx": 37,
    "type": "Property",
  },
  Object {
    "endIdx": 45,
    "startIdx": 41,
    "type": "KeyValue",
    "value": "ABC",
  },
  Object {
    "endIdx": 46,
    "selfClosing": false,
    "startIdx": 46,
    "type": "TagOpenEnd",
  },
  Object {
    "endIdx": 75,
    "startIdx": 64,
    "tag": "Description",
    "type": "TagOpenBegin",
  },
  Object {
    "endIdx": 76,
    "selfClosing": false,
    "startIdx": 76,
    "type": "TagOpenEnd",
  },
  Object {
    "endIdx": 97,
    "startIdx": 77,
    "type": "Whitespace",
  },
  Object {
    "endIdx": 103,
    "startIdx": 98,
    "tag": "Space",
    "type": "TagOpenBegin",
  },
  Object {
    "endIdx": 104,
    "startIdx": 104,
    "type": "Whitespace",
  },
  Object {
    "endIdx": 106,
    "selfClosing": true,
    "startIdx": 105,
    "type": "TagOpenEnd",
  },
  Object {
    "endIdx": 127,
    "startIdx": 107,
    "type": "Whitespace",
  },
  Object {
    "endIdx": 144,
    "startIdx": 128,
    "type": "Description",
    "value": "Test description",
  },
  Object {
    "endIdx": 164,
    "startIdx": 144,
    "type": "Whitespace",
  },
  Object {
    "endIdx": 169,
    "startIdx": 165,
    "tag": "Link",
    "type": "TagOpenBegin",
  },
  Object {
    "endIdx": 170,
    "startIdx": 170,
    "type": "Whitespace",
  },
  Object {
    "endIdx": 174,
    "isBoolean": false,
    "key": "key",
    "startIdx": 171,
    "type": "Property",
  },
  Object {
    "endIdx": 179,
    "startIdx": 175,
    "type": "KeyValue",
    "value": "DEF",
  },
  Object {
    "endIdx": 180,
    "selfClosing": false,
    "startIdx": 180,
    "type": "TagOpenEnd",
  },
  Object {
    "endIdx": 190,
    "startIdx": 181,
    "type": "Description",
    "value": "link text",
  },
  Object {
    "endIdx": 196,
    "startIdx": 190,
    "tag": "Link",
    "type": "TagClose",
  },
  Object {
    "endIdx": 217,
    "startIdx": 197,
    "type": "Whitespace",
  },
  Object {
    "endIdx": 229,
    "startIdx": 218,
    "type": "Description",
    "value": "End of test",
  },
  Object {
    "endIdx": 245,
    "startIdx": 229,
    "type": "Whitespace",
  },
  Object {
    "endIdx": 259,
    "startIdx": 246,
    "tag": "Description",
    "type": "TagClose",
  },
  Object {
    "endIdx": 279,
    "startIdx": 273,
    "tag": "Room",
    "type": "TagClose",
  },
  Object {
    "endIdx": 296,
    "startIdx": 289,
    "tag": "Asset",
    "type": "TagClose",
  },
]
`;

exports[`tokenizer should tokenize nested tags 1`] = `
Array [
  Object {
    "endIdx": 5,
    "startIdx": 0,
    "tag": "Asset",
    "type": "TagOpenBegin",
  },
  Object {
    "endIdx": 6,
    "startIdx": 6,
    "type": "Whitespace",
  },
  Object {
    "endIdx": 10,
    "isBoolean": false,
    "key": "key",
    "startIdx": 7,
    "type": "Property",
  },
  Object {
    "endIdx": 16,
    "startIdx": 11,
    "type": "KeyValue",
    "value": "Test",
  },
  Object {
    "endIdx": 17,
    "selfClosing": false,
    "startIdx": 17,
    "type": "TagOpenEnd",
  },
  Object {
    "endIdx": 35,
    "startIdx": 31,
    "tag": "Room",
    "type": "TagOpenBegin",
  },
  Object {
    "endIdx": 36,
    "startIdx": 36,
    "type": "Whitespace",
  },
  Object {
    "endIdx": 43,
    "isBoolean": true,
    "key": "global",
    "startIdx": 37,
    "type": "Property",
    "value": true,
  },
  Object {
    "endIdx": 47,
    "isBoolean": false,
    "key": "key",
    "startIdx": 44,
    "type": "Property",
  },
  Object {
    "endIdx": 52,
    "startIdx": 48,
    "type": "KeyValue",
    "value": "ABC",
  },
  Object {
    "endIdx": 53,
    "selfClosing": false,
    "startIdx": 53,
    "type": "TagOpenEnd",
  },
  Object {
    "endIdx": 78,
    "startIdx": 71,
    "tag": "Feature",
    "type": "TagOpenBegin",
  },
  Object {
    "endIdx": 79,
    "startIdx": 79,
    "type": "Whitespace",
  },
  Object {
    "endIdx": 83,
    "isBoolean": false,
    "key": "key",
    "startIdx": 80,
    "type": "Property",
  },
  Object {
    "endIdx": 88,
    "startIdx": 84,
    "type": "KeyValue",
    "value": "DEF",
  },
  Object {
    "endIdx": 89,
    "startIdx": 89,
    "type": "Whitespace",
  },
  Object {
    "endIdx": 91,
    "selfClosing": true,
    "startIdx": 90,
    "type": "TagOpenEnd",
  },
  Object {
    "endIdx": 111,
    "startIdx": 105,
    "tag": "Room",
    "type": "TagClose",
  },
  Object {
    "endIdx": 128,
    "startIdx": 121,
    "tag": "Asset",
    "type": "TagClose",
  },
]
`;
